--- a/code/CsvBlobSplitterSolution/CsvBlobSplitterConsole/CsvBlobSplitterConsole.csproj
+++ b/code/CsvBlobSplitterSolution/CsvBlobSplitterConsole/CsvBlobSplitterConsole.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.9.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
+  </ItemGroup>
+
 </Project>
