--- a/code/CsvBlobSplitterSolution/CsvBlobSplitterConsole/CsvBlobSplitterConsole.csproj
+++ b/code/CsvBlobSplitterSolution/CsvBlobSplitterConsole/CsvBlobSplitterConsole.csproj
@@ -16,9 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.9.0" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
+    <PackageReference Include="Azure.Identity" Version="1.10.3" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
   </ItemGroup>
 
 </Project>
