--- a/code/CsvBlobSplitterSolution/CsvBlobSplitterConsole/CsvBlobSplitterConsole.csproj
+++ b/code/CsvBlobSplitterSolution/CsvBlobSplitterConsole/CsvBlobSplitterConsole.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Azure.Identity" Version="1.10.3" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="Microsoft.Azure.Kusto.Ingest" Version="11.3.5" />
   </ItemGroup>
 
 </Project>
