--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Copy binaries
       run: |
         mkdir bin
-        cp code/CsvBlobSplitterConsole/bin/Release/net*/* bin
+        cp -r code/CsvBlobSplitterConsole/bin/Release/net*/* bin
 
     - name: Azure Login
       run: az login --service-principal -u ${{ secrets.DEPLOY_CLIENT_ID }} -p ${{ secrets.DEPLOY_SECRET }} --tenant ${{ secrets.TENANT_ID }}
