--- a/code/KustoBlobSplitConsole/KustoBlobSplitConsole.csproj
+++ b/code/KustoBlobSplitConsole/KustoBlobSplitConsole.csproj
@@ -16,10 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.3" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.19.0" />
-    <PackageReference Include="CsvHelper" Version="30.0.1" />
-    <PackageReference Include="Microsoft.Azure.Kusto.Ingest" Version="11.3.5" />
+    <ProjectReference Include="..\KustoBlobSplitLib\KustoBlobSplitLib.csproj" />
   </ItemGroup>
 
 </Project>
