--- a/code/KustoBlobSplitLib/KustoBlobSplitLib.csproj
+++ b/code/KustoBlobSplitLib/KustoBlobSplitLib.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -16,7 +16,6 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.3" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.19.0" />
-    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="Microsoft.Azure.Kusto.Ingest" Version="11.3.5" />
   </ItemGroup>
 
