--- a/code/KustoBlobSplitServer/KustoBlobSplitServer.csproj
+++ b/code/KustoBlobSplitServer/KustoBlobSplitServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,4 +12,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KustoBlobSplitLib\KustoBlobSplitLib.csproj" />
+  </ItemGroup>
+
 </Project>
