--- a/code/KustoBlobSplitConsole/KustoBlobSplitConsole.csproj
+++ b/code/KustoBlobSplitConsole/KustoBlobSplitConsole.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KustoBlobSplitLib\KustoBlobSplitLib.csproj" />
+    <ProjectReference Include="..\KustoBlobSplitServiceBus\KustoBlobSplitServiceBus.csproj" />
   </ItemGroup>
 
 </Project>
