--- a/code/KustoBlobSplitServer/KustoBlobSplitServer.csproj
+++ b/code/KustoBlobSplitServer/KustoBlobSplitServer.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KustoBlobSplitLib\KustoBlobSplitLib.csproj" />
+    <ProjectReference Include="..\KustoBlobSplitServiceBus\KustoBlobSplitServiceBus.csproj" />
   </ItemGroup>
 
 </Project>
