--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -22,5 +22,5 @@ jobs:
     - name: Deploy infra
       run: |
         cd deployment/infra
-        bash deploy-infra.sh ${{ secrets.RESOURCE_GROUP }}
+        bash deploy-infra.sh ${{ secrets.RESOURCE_GROUP }} ${{ secrets.KUSTO_INGEST_URI }} ${{ secrets.KUSTO_DB }} ${{ secrets.KUSTO_TABLE }}
 
